--- a/login-passageiro.html
+++ b/login-passageiro.html
@@ -13,7 +13,6 @@ body{
   font-family:Inter, Arial, sans-serif;
   color:#000;
 }
-
 .page{
   min-height:100vh;
   display:flex;
@@ -21,7 +20,6 @@ body{
   justify-content:center;
   padding:22px;
 }
-
 .card{
   width:100%;
   max-width:380px;
@@ -33,23 +31,16 @@ body{
   flex-direction:column;
   gap:18px;
 }
-
-.logo{
-  text-align:center;
-}
-
+.logo{text-align:center}
 .logo h1{
   font-size:1.6rem;
   font-weight:900;
   letter-spacing:2px;
-  color:#000;
 }
-
 .logo span{
   font-size:.85rem;
   color:#555;
 }
-
 input{
   width:100%;
   padding:14px;
@@ -58,7 +49,6 @@ input{
   font-size:1rem;
   color:#000;
 }
-
 button{
   padding:16px;
   border-radius:18px;
@@ -66,10 +56,8 @@ button{
   background:linear-gradient(180deg,#E6C97A,#D4AF37);
   font-size:1rem;
   font-weight:800;
-  color:#000;
   cursor:pointer;
 }
-
 .error{
   color:#c62828;
   font-size:.8rem;
@@ -110,7 +98,7 @@ button{
 <script src="core/supabase.js"></script>
 
 <script>
-/* ================= CONFIG FIXA ================= */
+/* ================= CONFIG ================= */
 
 const GRUPO_ID = getGrupoId();
 
@@ -125,6 +113,7 @@ if(usuarioLogado && usuarioLogado.tipo === "passageiro"){
 
 const telefoneInput = document.getElementById("telefone");
 const erro = document.getElementById("erro");
+const btn = document.getElementById("btnEntrar");
 
 /* ================= MÁSCARA TELEFONE ================= */
 
@@ -134,10 +123,10 @@ telefoneInput.addEventListener("input", ()=>{
 
 /* ================= LOGIN ================= */
 
-document.getElementById("btnEntrar").onclick = async ()=>{
+btn.onclick = async () => {
   erro.style.display = "none";
 
-  const telefone = telefoneInput.value;
+  const telefone = telefoneInput.value.replace(/\D/g,"");
 
   if(telefone.length < 10){
     erro.innerText = "Telefone inválido";
@@ -152,13 +141,20 @@ document.getElementById("btnEntrar").onclick = async ()=>{
     .eq("tipo", "passageiro")
     .eq("ativo", true)
     .eq("grupo_id", GRUPO_ID)
-    .single();
+    .maybeSingle(); // ✅ AQUI ESTÁ A CORREÇÃO CRÍTICA
 
-  if(error || !data){
+  if(error){
+    console.error("Erro Supabase:", error);
     erro.style.display = "block";
     return;
   }
 
+  if(!data){
+    erro.style.display = "block";
+    return;
+  }
+
+  // ✅ LOGIN OK
   localStorage.setItem("usuarioRF", JSON.stringify(data));
   window.location.href = "dashboard-passageiro.html";
 };
