--- a/login-passageiro.html
+++ b/login-passageiro.html
@@ -95,7 +95,7 @@ button{
 
 <!-- SUPABASE GLOBAL ÚNICO -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="core/supabase.js"></script>
+<script src="./core/supabase.js"></script>
 
 <script>
 /* ================= CONFIG ================= */
