--- a/admin-login.html
+++ b/admin-login.html
@@ -96,7 +96,8 @@ button:active{
 
 <!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
+<script src="./core/supabase.js"></script>
+
 /* ================= CONFIGURAÇÃO FIXA ================= */
 
 const supabaseClient = supabase.createClient(
