--- a/admin-login.html
+++ b/admin-login.html
@@ -96,8 +96,7 @@ button:active{
 
 <!-- SUPABASE -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="./core/supabase.js"></script>
-
+<script>
 /* ================= CONFIGURAÇÃO FIXA ================= */
 
 const supabaseClient = supabase.createClient(
